# rec_llm

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CLIENT_34_REQUIREMENTS_ANALYSIS.md  CLIENT_REQUIREMENT_PHASE_PLAN.md  IMPLEMENTATION_ANALYSIS.md  LONG_AUDIO_30H_SUPPORT.md  LONG_AUDIO_HARDENING.md  PYTHON_ARCHITECTURE_RECOMMENDATION.md  PYTHON_MIGRATION_PLAN.md  README.md  SHORTCUT_FIX.md  STRESS_TEST_RESULTS.md  UPLOAD_QUEUE_REDESIGN.md  WINDOWS_INSTALL.md  api-keys.md  architecture.md  build-exe.md  deployment.md  how-it-works.md  index.html  package-lock.json  package.json  security.md  tsconfig.electron.json  tsconfig.json  what-need-for-run.md
rec_llm_python/: .gitignore  CLEAN_WINDOWS_TEST_CHECKLIST.md  README.md  WINDOWS_CLIENT_BUILD.md  export_schema.py  pyproject.toml  recllm.spec  requirements.txt  start.py
rec_llm_python/app/: __init__.py  __main__.py  config.py  desktop.py  health.py  main.py  middleware.py  runtime.py  settings_manager.py
rec_llm_python/app/ai/: __init__.py  grammar_correction.py  speaker_analysis.py  summarization.py  translation.py
rec_llm_python/app/api/: __init__.py  routes_ai.py  routes_analytics.py  routes_backup.py  routes_batch.py  routes_diagnostics.py  routes_exports.py  (+10 more)
rec_llm_python/docs/: API_SPEC.md  BUILD_MANUAL.md  DB_DESIGN.md  DESIGN.md  TEST_REPORT.md  openapi.json
rec_llm_python/installer/: recllm.iss
rec_llm_python/tests/: conftest.py  test_ai_features.py  test_api.py  test_api_extended.py  test_core.py  test_new_apis.py  test_pipeline.py  test_pipeline_integration.py  test_speaker_intelligence.py
(+119 files in other folders)
